Changed app icon and updated overall app look
Updated app icon designed in Inkscape. Added the blue colors i used for the icon in colors.xml. Also added Orbitron fonts from Google Fonts, as well as added new drawables to improve the overall look of the app.

--- a/app/src/main/res/drawable/main_screen_background.xml
+++ b/app/src/main/res/drawable/main_screen_background.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <gradient android:angle="45" android:endColor="#FFEC2CF7" android:startColor="#FF1C11AA" android:type="linear" />
+            <gradient android:angle="45" android:endColor="@color/blue" android:startColor="@color/lightBlue" android:type="linear" />
         </shape>
     </item>
 </selector>
