--- a/app/src/main/res/drawable-v24/ic_launcher_background.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_background.xml
@@ -2,24 +2,25 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="1000"
-    android:viewportHeight="1000">
-    <group>
-        <clip-path android:pathData="M0,0h1000v1000h-1000z" />
-        <path android:pathData="M0,0h1000v1000h-1000z">
+    android:viewportWidth="108"
+    android:viewportHeight="108">
+    <group
+        android:scaleX="0.79722446"
+        android:scaleY="0.79722446">
+        <path android:pathData="m0,-0h135.47v135.47h-135.47z">
             <aapt:attr name="android:fillColor">
                 <gradient
-                    android:startY="888.8889"
-                    android:startX="112.59259"
-                    android:endY="87.40741"
-                    android:endX="885.9259"
+                    android:startY="-1.1688E-6"
+                    android:startX="135.47"
+                    android:endY="135.47"
+                    android:endX="8.199E-7"
                     android:type="linear">
                     <item
-                        android:offset="0.008695652"
-                        android:color="#FF1C12AA" />
+                        android:offset="0"
+                        android:color="#FF0000D4" />
                     <item
                         android:offset="1"
-                        android:color="#FFEC2CF7" />
+                        android:color="#FF00CCFF" />
                 </gradient>
             </aapt:attr>
         </path>
