Implemented pause button and updated app styles
Change Log:
1) Implemented pause button for game screen.
2) Implemented game pause dialog, which includes:
    a) `Home` button, that ends the game and navigates player to the main screen.
    b) `Resume` button, that resumes the game.
    c) The pause dialog cannot be dismissed on back press or when area outside dialog is touched.
3) Game is now paused and dialog shown when:
    a) Pause button is pressed.
    b) Back button is pressed.
    c) onPause event is called on the GameFragment.
4) Added new style in styles.xml for game button.
5) Updated and added new drawables for game sidebar, pause dialog and pause button.
6) Changed sidebar in fragment_game.xml from LinearLayout to ConstraintLayout.

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -30,18 +30,14 @@
 
         <Button
             android:id="@+id/start_button"
-            style="@style/Widget.AppCompat.Button.Borderless"
+            style="@style/GameButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="32dp"
-            android:background="@drawable/button_background"
-            android:fontFamily="@font/orbitron_black"
             android:padding="16dp"
             android:text="@string/start"
-            android:textColor="@android:color/white"
             android:textSize="32sp"
-            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
