--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,15 +1,39 @@
 <resources>
 
-    <!-- Base application theme. -->
+    <!-- Base application theme -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Fullscreen activity -->
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowContentOverlay">@null</item>
 
+        <!-- Popup menu background -->
+        <item name="android:popupMenuStyle">@style/PopupMenu</item>
+        <item name="android:textAppearanceLargePopupMenu">
+            @style/AppTheme.TextAppearance.Popup.Large
+        </item>
+        <item name="android:textAppearanceSmallPopupMenu">
+            @style/AppTheme.TextAppearance.Popup.Small
+        </item>
+
         <!-- Colors -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="PopupMenu" parent="@android:style/Widget.PopupMenu">
+        <item name="android:popupBackground">@drawable/game_pause_dialog_background</item>
+    </style>
+
+    <style name="AppTheme.TextAppearance.Popup.Large" parent="TextAppearance.AppCompat.Light.Widget.PopupMenu.Large">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:fontFamily">@font/orbitron_medium</item>
+    </style>
+
+    <style name="AppTheme.TextAppearance.Popup.Small" parent="TextAppearance.AppCompat.Light.Widget.PopupMenu.Small">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:fontFamily">@font/orbitron_medium</item>
     </style>
 
     <style name="GameButton">
