--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">@color/lightBlue</color>
+    <color name="colorPrimaryDark">@color/blue</color>
+    <color name="colorAccent">@color/yellow</color>
 
     <color name="blue">#0000D4</color>
     <color name="lightBlue">#00CCFF</color>
+    <color name="yellow">#FBC02D</color>
+    <color name="lightYellow">#FFEB3B</color>
 </resources>
