Added About screen with credits to background music, and fixed music pause issues

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,5 +9,8 @@
         android:id="@+id/instructions"
         android:title="@string/instructions"
         app:showAsAction="never" />
-
+    <item
+        android:id="@+id/about"
+        android:title="@string/about"
+        app:showAsAction="never" />
 </menu>
