--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -8,7 +8,7 @@
         android:layout_height="match_parent"
         android:background="@drawable/screen_background"
         android:padding="8dp"
-        tools:context=".screens.instructions.InstructionsFragment">
+        tools:context=".screens.about.AboutFragment">
 
         <ImageButton
             android:id="@+id/back_button"
@@ -18,20 +18,20 @@
             android:background="@drawable/button_background"
             android:contentDescription="@string/back"
             android:padding="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/instructions_text"
+            app:layout_constraintBottom_toBottomOf="@+id/about_text"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/instructions_text"
+            app:layout_constraintTop_toTopOf="@+id/about_text"
             app:srcCompat="@drawable/ic_arrow_back_24px" />
 
         <TextView
-            android:id="@+id/instructions_text"
+            android:id="@+id/about_text"
             style="@style/GameText.Bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
-            android:text="@string/instructions"
+            android:text="@string/about"
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -50,13 +50,38 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/instructions_text">
+            app:layout_constraintTop_toBottomOf="@+id/about_text">
 
             <LinearLayout
                 android:id="@+id/content_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"></LinearLayout>
+                android:orientation="vertical"
+                android:paddingStart="32dp"
+                android:paddingTop="16dp"
+                android:paddingEnd="32dp"
+                android:paddingBottom="16dp">
+
+                <TextView
+                    android:id="@+id/credits_tile_text"
+                    style="@style/GameText.Bold"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:gravity="center"
+                    android:text="@string/credits"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/credits_content_text"
+                    style="@style/GameText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:lineSpacingExtra="8sp"
+                    android:linksClickable="true"
+                    android:text="@string/credits_content_text" />
+
+            </LinearLayout>
 
         </ScrollView>
 
