Implemented prompt to resume last game from saved game state
Change Log:
1) Atoms and Towers now can be created from a saved game state.
2) Added new methods to create Atoms and Towers from saved game state.
3) New dialog to prompt user if to create a new game or continue last one (from saved game state), if it has been saved.
4) New method in GameRepository.java to retrieve the saved game state, as well as a new method in Util.java to check if a file exists in internal storage.
5) Added Safe-Args dependencies to project, to pass SaveGameState objects between fragments.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -42,7 +42,11 @@
         android:id="@+id/gameFragment"
         android:name="com.example.atomictowers.screens.game.GameFragment"
         android:label="fragment_game"
-        tools:layout="@layout/fragment_game" />
+        tools:layout="@layout/fragment_game">
+        <argument
+            android:name="savedGameState"
+            app:argType="com.example.atomictowers.data.game.game_state.SavedGameState" />
+    </fragment>
     <fragment
         android:id="@+id/instructionsFragment"
         android:name="com.example.atomictowers.screens.instructions.InstructionsFragment"
