--- a/app/src/main/res/drawable/sidebar_background.xml
+++ b/app/src/main/res/drawable/sidebar_background.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <gradient android:type="radial" android:startColor="@color/lightBlue" android:endColor="@color/blue" android:gradientRadius="200%" android:centerX="50%" android:centerY="100%" />
+            <gradient android:centerX="50%" android:centerY="100%" android:endColor="@color/blue" android:gradientRadius="200%" android:startColor="@color/lightBlue" android:type="radial" />
         </shape>
     </item>
 </selector>
