--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,7 +41,13 @@
     <!-- SeekBar -->
     <style name="GameSeekBar">
         <item name="android:maxHeight">8dp</item>
-        <item name="android:progressDrawable">@drawable/seekbar_progress</item>
+        <item name="android:progressDrawable">@drawable/progress_drawable</item>
+    </style>
+
+    <!-- Progress bar -->
+    <style name="GameProgressBar" parent="Widget.AppCompat.ProgressBar.Horizontal">
+        <item name="android:minHeight">8dp</item>
+        <item name="android:progressDrawable">@drawable/progress_drawable</item>
     </style>
 
     <!-- Popup Menu -->
