--- a/app/src/main/res/drawable/screen_background.xml
+++ b/app/src/main/res/drawable/screen_background.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape>
-            <gradient android:angle="45" android:endColor="@color/blue" android:startColor="@color/lightBlue" android:type="linear" />
-        </shape>
-    </item>
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <gradient
+        android:angle="45"
+        android:endColor="@color/blue"
+        android:startColor="@color/lightBlue"
+        android:type="linear" />
+</shape>
