--- a/app/src/main/res/drawable/sidebar_background.xml
+++ b/app/src/main/res/drawable/sidebar_background.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape>
-            <gradient android:centerX="50%" android:centerY="100%" android:endColor="@color/blue" android:gradientRadius="200%" android:startColor="@color/lightBlue" android:type="radial" />
-        </shape>
-    </item>
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <gradient
+        android:centerX="50%"
+        android:centerY="100%"
+        android:endColor="@color/blue"
+        android:gradientRadius="200%"
+        android:startColor="@color/lightBlue"
+        android:type="radial" />
+</shape>
