--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -6,7 +6,7 @@
     <data>
 
         <variable
-            name="gameViewModel"
+            name="viewModel"
             type="com.example.atomictowers.screens.game.GameViewModel" />
 
     </data>
@@ -63,6 +63,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
                 android:max="100"
+                android:progress="@{viewModel.healthPercent}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/pause_button"
@@ -79,12 +80,12 @@
                 android:paddingTop="8dp"
                 android:paddingEnd="12dp"
                 android:paddingBottom="8dp"
+                android:text="@{@string/energy_sidebar_indicator(viewModel.energy)}"
                 android:textColor="@android:color/white"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/health_progress"
-                tools:text="Energy:  50 J" />
+                app:layout_constraintTop_toBottomOf="@+id/health_progress" />
 
             <TextView
                 android:id="@+id/textView2"
@@ -112,18 +113,19 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
                 android:layout_weight="1"
-                android:background="@drawable/button_background"
+                android:background="@{viewModel.isElectronShooterSelected() ? @drawable/button_background : @drawable/transparent_background}"
                 android:contentDescription="@string/electron_shooter"
+                android:onClick="@{() -> viewModel.selectElectronShooter()}"
                 android:padding="8dp"
                 android:src="@drawable/electron_shooter"
-                app:layout_constraintBottom_toTopOf="@+id/imageView"
+                app:layout_constraintBottom_toTopOf="@+id/photonic_laser_sidebar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/photonic_laser_sidebar"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginStart="16dp"
@@ -131,6 +133,8 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
                 android:layout_weight="1"
+                android:background="@{viewModel.isPhotonicLaserSelected() ? @drawable/button_background : @drawable/transparent_background}"
+                android:onClick="@{() -> viewModel.selectPhotonicLaser()}"
                 android:padding="8dp"
                 android:src="@drawable/photonic_laser"
                 app:layout_constraintBottom_toBottomOf="parent"
